Fix contact page on mobiles

--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -21,7 +21,7 @@
 .contactArticle {
   min-height: 40vh;
   width: 100%;
-  padding-top: 5rem;
+  padding: 5rem 0;
 }
 
 .contact{
@@ -29,5 +29,10 @@
   div {
     width: 60%;
     padding: 0 3rem;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      padding: 0 1rem;
+    }
   }
 }
